Actions
Bug #5364
closedgrp.h has incorrect prototype for getgrnam_r and getgrgid_r
Start date:
2014-11-21
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
Marcel Telka correctly points out that getgrnam_r and getgrgid_r have the same problem as described in 5363. We should fix that too.
Related issues
Updated by Robert Mustacchi over 7 years ago
- Subject changed from grp.h has the same problem as #5363 to grp.h has incorrect prototype for getgrnam_r and getgrgid_r.]
Updated by Robert Mustacchi over 7 years ago
- Subject changed from grp.h has incorrect prototype for getgrnam_r and getgrgid_r.] to grp.h has incorrect prototype for getgrnam_r and getgrgid_r
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 591ef764641217c678e78cf03e535ae8016a4595
commit 591ef764641217c678e78cf03e535ae8016a4595 Author: Keith M Wesolowski <wesolows@foobazco.org> Date: 2014-12-02T17:30:34.000Z 5364 grp.h has incorrect prototype for getgrnam_r and getgrgid_r Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@omniti.com>
Actions